<resources>
    <string name="app_name">RSS_Book</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dingyuyuan">订阅源</string>
    <string name="starpaper">星标文章</string>
    <string name="hot">热门</string>
    <string name="flag">标签</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="account">account/邮箱</string>
    <string name="psw">password/至少6位</string>
    <string name="fps">忘记密码?</string>
    <string name="login">登录</string>
    <string name="zc">注册</string>
    <string name="submit">提交</string>
    <string name="user_name">昵称:</string>
    <string name="last">上一篇</string>
    <string name="favour">收藏</string>
    <string name="zan">点赞</string>
    <string name="next">下一篇</string>
    <string name="article">文章</string>
    <string name="hot_dingyueyuan">热门订阅源</string>
    <string name="unread">未读</string>
    <string name="save">收藏</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="add_user">注册</string>
</resources>
