<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/editRel"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/accountRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/account"
                android:layout_marginLeft="15dip"
                android:hint="@string/account"
                android:background="@null"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pwdRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountRel"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:layout_toRightOf="@id/pwd"
                android:layout_marginLeft="15dip"
                android:inputType="textPassword"
                android:hint="@string/psw"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_marginTop="10dip"
        android:layout_width="250dp"
        android:layout_height="30.5dp"
        android:id="@+id/sign"
        android:background="@drawable/top"
        android:text="@string/add_user"
        android:layout_gravity="center"
        android:textColor="#ffffff" />
</LinearLayout>